--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.23</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.15</version>
+        </dependency>
     </dependencies>
 
     <build>
