--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,6 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij
+
+FileUploads/*.pdf
+FileUploads/*.docx
