--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-## MULTIPART (MultipartProperties)
-# Enable multipart uploads
-spring.servlet.multipart.enabled=true
-# Threshold after which files are written to disk.
-spring.servlet.multipart.file-size-threshold=2KB
-# Max file size.
-spring.servlet.multipart.max-file-size=200MB
-# Max Request Size
-spring.servlet.multipart.max-request-size=215MB
+app.version=0.0.1
+file.upload-dir=E:/Endava/DevelopRamp/FirstService/FileUploads
+queue.name=JoinerQueue
 
-## File Storage Properties
-# All files uploaded through the REST API will be stored in this directory
-file.upload-dir=E:\Endava\DevelopRamp\FirstService\FileUploads
+server.port=5600
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=500KB
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=25MB
+
+
+spring.rabbitmq.dynamic=true
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.host=192.168.0.10
