added the option to process PDF or docx files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 app.version=0.0.1
-file.upload-dir=E:/Endava/DevelopRamp/FirstService/FileUploads
+file.upload-dir=D:/Endava/DevelopmentRampUp/FirstService/FileUploads
 queue.name=JoinerQueue
 
 server.port=5600
